# finnhub-rust

./: Cargo.toml  README.md
src/: client.rs  lib.rs
