[package]
name = "finnhub-rust"
version = "0.1.0"
edition = "2021"
description = "Rust client for Finnhub"
license = "GPL-3.0"
repository = "https://github.com/ryqdev/finnhub-rust"
authors = ["ryqdev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
