[package]
name = "finnhub-rust"
version = "0.1.5"
edition = "2021"
description = "Rust client for Finnhub"
license = "GPL-3.0"
repository = "https://github.com/ryqdev/finnhub-rust"
authors = ["ryqdev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
